# tutTest

./: .gitignore  Hakefile  README  memo  stack.yaml  tutTest.cabal
samples/: sample.txt  sample2.txt
src/: KeyPos.hs  keyboard-pos.txt  tutCheck.hs  tutTest.hs  tutTyping.hs  tutcode-rule.txt
